--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@craco/craco": "^6.1.2",
+    "autoprefixer": "9",
     "axios": "^0.21.1",
     "core-js": "^3.13.0",
+    "postcss": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "scripts": {
+    "start": "craco start",
+    "test": "craco test",
     "dev": "webpack-cli serve",
     "build": "webpack",
     "type:check": "tsc",
@@ -46,6 +52,7 @@
     "@typescript-eslint/parser": "^4.25.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
+    "css-loader": "^5.2.6",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.23.2",
@@ -53,7 +60,10 @@
     "html-webpack-plugin": "^5.3.1",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
+    "postcss-loader": "^5.3.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.0",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-styled-components": "^0.1.1",
